--- a/arch/arm64/configs/lineageos_hydrogen_defconfig
+++ b/arch/arm64/configs/lineageos_hydrogen_defconfig
@@ -2633,6 +2633,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_LOGO is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
+CONFIG_SOUND_CONTROL=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
