--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -25,22 +25,30 @@
 		bootargs = "boot_cpus=0,4,5,6,7 sched_enable_hmp=1";
 	};
 
-	firmware: firmware {
-                android {
-                        compatible = "android,firmware";
-                        fstab {
-                                compatible = "android,fstab";
-                                system {
-                                        compatible = "android,system";
-                                        dev = "/dev/block/platform/soc.0/7824900.sdhci/by-name/system";
-                                        type = "ext4";
-                                        mnt_flags = "ro,barrier=1,discard";
-                                        fsmgr_flags = "wait,verify";
-                                        status = "ok";
-                                };
-                        };
+	firmware {
+        android {
+            compatible = "android,firmware";
+            fstab {
+                compatible = "android,fstab";
+                system {
+                    compatible = "android,system";
+                    dev = "/dev/block/platform/soc.0/7824900.sdhci/by-name/system";
+                    type = "ext4";
+                    mnt_flags = "ro,barrier=1,discard";
+                    fsmgr_flags = "wait";
+                    status = "ok";
                 };
+                vendor {
+                    compatible = "android,vendor";
+                    dev = "/dev/block/platform/soc.0/7824900.sdhci/by-name/cust";
+                    type = "ext4";
+                    mnt_flags = "ro,barrier=1";
+                    fsmgr_flags = "wait";
+                    status = "ok";
+                };
+            };
         };
+    };
 
 	aliases {
 		sdhc1 = &sdhc_1; /* SDC1 eMMC slot */
