[DNM]: devicetree: Fix early mount nodes in DT for mounting /system and /vendor on early init
*IMPORTANT!!! Remove system and vendor partition lines from fstab.qcom in device tree/mark them as recoveryonly or stuck on boot animation!!!
*Vendor is disabled currently, for later use when Android Project Treble is implemented eventually
commit/850874386e39d8a468697fff43222562a973557a

--- a/arch/arm/boot/dts/qcom/hydrogen/msm8976-hydrogen.dtsi
+++ b/arch/arm/boot/dts/qcom/hydrogen/msm8976-hydrogen.dtsi
@@ -46,6 +46,36 @@
 		qup10 = &test_pacman;
 	};
 
+    /*
+     * IMPORTANT!!! Remove /system and /vendor partition lines from fstab.qcom in device tree
+     * in device tree or mark them as recoveryonly
+     */
+    firmware {
+        android {
+            compatible = "android,firmware";
+            fstab {
+                compatible = "android,fstab";
+                system {
+                    compatible = "android,system";
+                    dev = "/dev/block/platform/soc.0/7824900.sdhci/by-name/system";
+                    type = "ext4";
+                    mnt_flags = "ro,barrier=1,discard";
+                    fsmgr_flags = "wait";
+                    status = "ok";
+                };
+                vendor {
+                    compatible = "android,vendor";
+                    dev = "/dev/block/platform/soc.0/7824900.sdhci/by-name/cust";
+                    type = "ext4";
+                    mnt_flags = "ro,barrier=1,discard";
+                    fsmgr_flags = "wait";
+                    /* change to status = "ok" to enable early mount for Treble devices */
+                    status = "disabled";
+                };
+            };
+        };
+    };
+
 	soc: soc { };
 
 	aliases {
