devicetree: Enable vendor early mount as well
* Building separate vendor.img now, no more /system/vendor

--- a/arch/arm/boot/dts/qcom/hydrogen/msm8976-hydrogen.dtsi
+++ b/arch/arm/boot/dts/qcom/hydrogen/msm8976-hydrogen.dtsi
@@ -70,7 +70,7 @@
                     mnt_flags = "ro,barrier=1,discard";
                     fsmgr_flags = "wait";
                     /* change to status = "ok" to enable early mount for Treble devices */
-                    status = "disabled";
+                    status = "ok";
                 };
             };
         };
